gcc/testsuite/gfortran.dg/include_24.f90
implicit none
include "."  ! { dg-error "Included file '.' is not a regular file" }
end
! { dg-prune-output "compilation terminated." }
